--- a/prosite/views/header.xml
+++ b/prosite/views/header.xml
@@ -29,87 +29,87 @@
             <div id="submenu-1" class="submenu">
                 <div class="submenu-column">
                     <div class="column-title">Robotic</div>
-                    <div><a href="https://www.r-e-a-l.it/equipment/robotic/blkarc/">BLK ARC</a></div>
+                    <div><a href="/equipment/robotic/blkarc/">BLK ARC</a></div>
                 </div>
                 <div class="submenu-column">
                     <div class="column-title">Efficient</div>
-                    <div><a href="https://www.r-e-a-l.it/equipment/efficient/pegasus-trk/">Pegasus TRK</a></div>
+                    <div><a href="/equipment/efficient/pegasus-trk/">Pegasus TRK</a></div>
                 </div>
                 <div class="submenu-column">
                     <div class="column-title">Aerial</div>
-                    <div><a href="https://www.r-e-a-l.it/equipment/aerial/blk2fly/">BLK2FLY</a></div>
+                    <div><a href="/equipment/aerial/blk2fly/">BLK2FLY</a></div>
                 </div>
                 <div class="submenu-column">
                     <div class="column-title">Localized</div>
                 </div>
                 <div class="submenu-column">
                     <div class="column-title">Inertial</div>
-                    <div><a href="https://www.r-e-a-l.it/equipment/efficient/blk2go/">BLK2GO</a></div>
-                    <div><a href="https://www.r-e-a-l.it/equipment/efficient/blk2go-pulse/">BLK2GO Pulse</a></div>
+                    <div><a href="/equipment/efficient/blk2go/">BLK2GO</a></div>
+                    <div><a href="/equipment/efficient/blk2go-pulse/">BLK2GO Pulse</a></div>
                 </div>
                 <div class="submenu-column">
                     <div class="column-title">Terrestrial</div>
-                    <div><a href="https://www.r-e-a-l.it/equipment/terrestrial/rtc360/">RTC360</a></div>
-                    <div><a href="https://www.r-e-a-l.it/equipment/terrestrial/blk360-g2/">BLK360</a></div>
-                    <div><a href="https://www.r-e-a-l.it/equipment/terrestrial/pseries/">P-Series</a></div>
+                    <div><a href="/equipment/terrestrial/rtc360/">RTC360</a></div>
+                    <div><a href="/equipment/terrestrial/blk360-g2/">BLK360</a></div>
+                    <div><a href="/equipment/terrestrial/pseries/">P-Series</a></div>
                 </div>
             </div>
 
             <div id="submenu-2" class="submenu">
                 <div class="submenu-column">
                     <div class="column-title">Specialized Tripods</div>
-                    <div><a href="https://www.r-e-a-l.it/equipment/uplift">UPLIFT</a></div>
-                    <div><a href="https://www.r-e-a-l.it/equipment/upside-down-tripod">Upside-Down Tripod</a></div>
-                    <div><a href="https://www.r-e-a-l.it/equipment/horizontal-scan">Horizontal Scan</a></div>
-                    <div><a href="https://www.r-e-a-l.it/equipment/kangur-lift">Automatic Lifter</a></div>
-                    <div><a href="https://www.r-e-a-l.it/equipment/whippy-scan">Whippy Scan</a></div>
-                    <div><a href="https://www.r-e-a-l.it/equipment/blk360-window-scan">BLK360 Window Scan</a></div>
+                    <div><a href="/equipment/uplift">UPLIFT</a></div>
+                    <div><a href="/equipment/upside-down-tripod">Upside-Down Tripod</a></div>
+                    <div><a href="/equipment/horizontal-scan">Horizontal Scan</a></div>
+                    <div><a href="/equipment/kangur-lift">Automatic Lifter</a></div>
+                    <div><a href="/equipment/whippy-scan">Whippy Scan</a></div>
+                    <div><a href="/equipment/blk360-window-scan">BLK360 Window Scan</a></div>
                 </div>
                 <div class="submenu-column">
                     <div class="column-title">Backpacks</div>
-                    <div><a href="https://www.r-e-a-l.it/equipment/blk2go-backpack">BLK2GO Backpack</a></div>
+                    <div><a href="/equipment/blk2go-backpack">BLK2GO Backpack</a></div>
                 </div>
                 <div class="submenu-column">
                     <div class="column-title">LED Lights</div>
-                    <div><a href="https://www.r-e-a-l.it/equipment/led-lights-for-tripod">LED Lights for Tripod</a></div>
-                    <div><a href="https://www.r-e-a-l.it/equipment/led-lights-for-blk2go">LED Lights for BLK2GO</a></div>
+                    <div><a href="/equipment/led-lights-for-tripod">LED Lights for Tripod</a></div>
+                    <div><a href="/equipment/led-lights-for-blk2go">LED Lights for BLK2GO</a></div>
                 </div>
                 <div class="submenu-column">
                     <div class="column-title">Car Roof Scanning</div>
-                    <div><a href="https://www.r-e-a-l.it/equipment/level-plane">Level Plane</a></div>
-                    <div><a href="https://www.r-e-a-l.it/equipment/smart-lift-roof">Smart Lift Roof</a></div>
-                    <div><a href="https://www.r-e-a-l.it/equipment/level-lift-roof">Level Lift Roof</a></div>
+                    <div><a href="/equipment/level-plane">Level Plane</a></div>
+                    <div><a href="/equipment/smart-lift-roof">Smart Lift Roof</a></div>
+                    <div><a href="/equipment/level-lift-roof">Level Lift Roof</a></div>
                 </div>
             </div>
             <div id="submenu-3" class="submenu">
                 <div class="submenu-column">
                     <div class="column-title">Cyclone</div>
-                    <div><a href="https://www.r-e-a-l.it/software/cyclone-register360/">Cyclone REGISTER 360 PLUS</a></div>
-                    <div><a href="https://www.r-e-a-l.it/capture/software/cyclone-workflow/">Cyclone WORKFLOW</a></div>
-                    <div><a href="https://www.r-e-a-l.it/software/cyclone-enterprise/">Cyclone ENTERPRISE</a></div>
-                    <div><a href="https://www.r-e-a-l.it/software/cyclone-3dr/">Cyclone 3DR</a></div>
-                    <div><a href="https://www.r-e-a-l.it/capture/software/cyclone-pegasus/">Cyclone PEGASUS OFFICE</a></div>
+                    <div><a href="/software/cyclone-register360/">Cyclone REGISTER 360 PLUS</a></div>
+                    <div><a href="/capture/software/cyclone-workflow/">Cyclone WORKFLOW</a></div>
+                    <div><a href="/software/cyclone-enterprise/">Cyclone ENTERPRISE</a></div>
+                    <div><a href="/software/cyclone-3dr/">Cyclone 3DR</a></div>
+                    <div><a href="/capture/software/cyclone-pegasus/">Cyclone PEGASUS OFFICE</a></div>
                 </div>
                 <div class="submenu-column">
                     <div class="column-title">Epic Games</div>
-                    <div><a href="https://www.r-e-a-l.it/software/realitycapture/">RealityCapture</a></div>
-                    <div><a href="https://www.r-e-a-l.it/software/realitycloudstudio/">Reality Cloud Studio</a></div>
+                    <div><a href="/software/realitycapture/">RealityCapture</a></div>
+                    <div><a href="/software/realitycloudstudio/">Reality Cloud Studio</a></div>
                 </div>
                 <div class="submenu-column">
                     <div class="column-title">Other</div>
-                    <div><a href="https://www.r-e-a-l.it/software/cloudworx/">CloudWorx</a></div>
-                    <div><a href="https://www.r-e-a-l.it/software/rithm/">Rithm</a></div>
-                    <div><a href="https://www.r-e-a-l.it/software/verity/">Verity</a></div>
-                    <div><a href="https://www.r-e-a-l.it/software/truview/">TruView</a></div>
+                    <div><a href="/software/cloudworx/">CloudWorx</a></div>
+                    <div><a href="/software/rithm/">Rithm</a></div>
+                    <div><a href="/software/verity/">Verity</a></div>
+                    <div><a href="/software/truview/">TruView</a></div>
                 </div>
             </div>
             <div id="submenu-4" class="submenu">
                 <div class="submenu-column">
-                    <div><a href="https://www.r-e-a-l.it/industries/surveying">Surveying</a></div>
-                    <div><a href="https://www.r-e-a-l.it/industries/architecture">Architecture</a></div>
-                    <div><a href="https://www.r-e-a-l.it/industries/engineering">Engineering</a></div>
-                    <div><a href="https://www.r-e-a-l.it/industries/construction">Construction</a></div>
-                    <div><a href="https://www.r-e-a-l.it/industries/manufacturing">Manufacturing</a></div>
+                    <div><a href="/industries/surveying">Surveying</a></div>
+                    <div><a href="/industries/architecture">Architecture</a></div>
+                    <div><a href="/industries/engineering">Engineering</a></div>
+                    <div><a href="/industries/construction">Construction</a></div>
+                    <div><a href="/industries/manufacturing">Manufacturing</a></div>
                 </div>
             </div>
             <div id="submenu-5" class="submenu">
