--- a/prosite/static/src/css/header.css
+++ b/prosite/static/src/css/header.css
@@ -232,6 +232,27 @@
 
 
 
+/* #custom-webpage-root .subheader {
+	background-color: #1a1a1ab3;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	left: 0;
+	width: 100%;
+	z-index: 49;
+}
+
+#custom-webpage-root .subheader>a>h3 {
+	color: #888;
+	font-family: roboto, sans-serif;
+	font-size: 1rem;
+	font-weight: 500;
+	padding: 5px 9px;
+	text-align: center;
+	text-transform: uppercase;
+} */
+
+
 /* Subheader Styling */
 .subheader {
     position: sticky !important; /* Makes it stick to the top when scrolling */
