Language fixes and CCP label parsing
Update quotesFrontend.xml

Add reverse language notification and add back section names

Update quoteHeaderText.css

Update quotesFrontend.xml

Update quotesFrontend.xml

Update quotesFrontend.xml

Update quotesFrontend.xml

Update models.py

Update models.py

--- a/proquotes/static/src/CSS/quoteHeaderText.css
+++ b/proquotes/static/src/CSS/quoteHeaderText.css
@@ -2,6 +2,12 @@
 	display: none;
 }
 
+.quoteLineRowNote > td {
+    padding: 10px !important;
+    padding-left: 15px !important;
+}
+
+
 .english-mode+div+div {
 	display: none;
 }
