Add latest code for LinkedIn link to opportunities model.

--- a/proCRMCustom/views/crm_opportinuity_custom.xml
+++ b/proCRMCustom/views/crm_opportinuity_custom.xml
@@ -10,6 +10,7 @@
                 <field name="opportunity_custom_status" />
                 <field name="opportunity_sn" />
                 <field name="opportunity_notes" />
+                <field name="linkedin_link" />
             </xpath>
         </field>
     </record>
