--- a/sync/views/product_template_views.xml
+++ b/sync/views/product_template_views.xml
@@ -4,7 +4,7 @@
         <field name="model">product.template</field>
         <field name="inherit_id" ref="product.product_template_only_form_view"/>
         <field name="arch" type="xml">
-            <xpath expr="//group[@name='sales']" position="inside">
+            <xpath expr="//group[@name='group_general']" position="inside">
                 <field name="dealer_discount"/>
             </xpath>
         </field>
