--- a/procommissions/views/commissions_views.xml
+++ b/procommissions/views/commissions_views.xml
@@ -1,24 +1,93 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-    <record id="view_pro_commissions_tree" model="ir.ui.view">
-        <field name="name">pro.commissions.tree</field>
-        <field name="model">pro.commissions</field>
+    <!-- Tree view for commissions -->
+    <record model="ir.ui.view" id="procom_commissions_view_tree">
+        <field name="name">ProCommissions Tree View</field>
+        <field name="model">procom.commission</field>
+        <field name="priority" eval="16" />
         <field name="arch" type="xml">
-            <tree string="Pro Commissions">
-                <field name="name"/>
-                <field name="amount"/>
+            <tree string="Commissions List" decoration-muted="state == 'unpaid'" decoration-warning="state == 'partially_paid'" decoration-success="state == 'fully_paid'">
+                <field name="state" string="Status" />
+                <field name="related_partner" string="Customer" />
+                <field name="name" string="Commission Name"/>
+                <field name="new_customer" string="New Customer"/>
+                <field name="logged_lead" string="Logged Lead"/>
+                <field name="developed_lead" string="Developed Opportunity"/>
+                <field name="quote_to_order" string="Quote to Order"/>
             </tree>
         </field>
     </record>
 
-    <record id="action_pro_commissions" model="ir.actions.act_window">
-        <field name="name">Pro Commissions</field>
-        <field name="res_model">pro.commissions</field>
-        <field name="view_mode">tree</field>
-        <field name="help" type="html">
-            <p class="o_view_nocontent_smiling_face">
-                Create your first Pro Commission Record
-            </p>
+    <!-- Form view for commissions -->
+    <record model="ir.ui.view" id="procom_commissions_view_form">
+        <field name="name">procom.commission.view.form</field>
+        <field name="model">procom.commission</field>
+        <field name="arch" type="xml">
+            <form string="Commission">
+                <header>
+                    <field name="state" widget="statusbar" statusbar_visible="unpaid,partially_paid,fully_paid" statusbar_colors="{'unpaid': 'grey', 'partially_paid': 'orange', 'fully_paid': 'green'}"/>
+                    <button name="action_set_unpaid" type="object" string="Mark as Unpaid" class="btn-secondary"/>
+                    <button name="action_set_partially_paid" type="object" string="Mark as Partially Paid" class="btn-secondary"/>
+                    <button name="action_set_fully_paid" type="object" string="Mark as Fully Paid" class="btn-secondary"/>
+                </header>
+                <sheet>
+                    <group>
+                        <group string="General Information">
+                            <field name="name" string="Commission Name"/>
+                            <field name="related_lead" string="Related Lead"/>
+                            <field name="related_order" string="Related Order"/>
+                            <field name="related_invoice" string="Related Invoice"/>
+                            <field name="related_partner" string="Customer"/>
+                        </group>
+                        <group string="Financial Calculations">
+                            <field name="sales_price" string="Sales Price (before tax)"/>
+                            <field name="reality_cost" string="R-E-A-L.iT Cost"/>
+                            <field name="shipping_cost" string="Shipping Cost"/>
+                            <field name="reality_margin" string="R-E-A-L.iT Margin"/>
+                            <field name="permission_filter" string="Permission Filter"/>
+                        </group>
+                    </group>
+
+                    <notebook>
+                        <page string="Sales Roles">
+                            <group>
+                                <group string="Roles">
+                                    <field name="new_customer" string="New Customer"/>
+                                    <field name="logged_lead" string="Logged Lead"/>
+                                    <field name="developed_lead" string="Developed Opportunity"/>
+                                    <field name="quote_to_order" string="Quote to Order"/>
+                                </group>
+                                <group string="Commissions">
+                                    <field name="new_customer_commission" string="New Customer Commission"/>
+                                    <field name="logged_lead_commission" string="Logged Lead Commission"/>
+                                    <field name="developed_lead_commission" string="Developed Opportunity Commission"/>
+                                    <field name="quote_to_order_commission" string="Quote to Order Commission"/>
+                                </group>
+                            </group>
+                        </page>
+                        <page string="Demo Records">
+                            <group>
+                                <field name="demo_count" string="Number of Demos"/>
+                                <field name="total_demo_commission" string="Total Demo Commission"/>
+                            </group>
+                            <group>
+                                <span colspan="99">
+                                Order lines will only appear here when they have a user set who performed a demo for the product. To set a user, look for the 'Demo by' column in the sales order document. You may have to unlock the document to alter it before saving.
+                                </span>
+                            </group>
+                            <field name="order_line_ids" widget="one2many_list">
+                                <tree string="Demo Products" editable="bottom">
+                                    <field name="product_id" string="Product Name" readonly="1"/>
+                                    <field name="price_unit" string="Price" readonly="1"/>
+                                    <field name="leica_price" string="Leica Price"/>
+                                    <field name="demo_by" string="Demo By"/>
+                                    <field name="commission" string="Commission" readonly="1"/>
+                                </tree>
+                            </field>
+                        </page>
+                    </notebook>
+                </sheet>
+            </form>
         </field>
     </record>
 </odoo>
