--- a/proexpenses/views/bank_statement_views.xml
+++ b/proexpenses/views/bank_statement_views.xml
@@ -8,8 +8,8 @@
                 <button type="object"
                         name="action_transfer_expense"
                         class="btn btn-primary btn-sm mt-1"
-                        string="Transfer to">
-                    Transfer to
+                        string="Transfer">
+                    Transfer
                 </button>
             </xpath>
         </field>
