--- a/proexpenses/views/bank_statement_views.xml
+++ b/proexpenses/views/bank_statement_views.xml
@@ -14,4 +14,27 @@
             </xpath>
         </field>
     </record>
+    
+    <record id="view_expense_transfer_wizard_form" model="ir.ui.view">
+        <field name="name">expense.transfer.wizard.form</field>
+        <field name="model">expense.transfer.wizard</field>
+        <field name="arch" type="xml">
+            <form string="Transfer Expense">
+                <group>
+                    <field name="company_id"/>
+                </group>
+                <footer>
+                    <button string="Confirm" type="object" name="action_confirm_transfer" class="btn-primary"/>
+                    <button string="Cancel" class="btn-secondary" special="cancel"/>
+                </footer>
+            </form>
+        </field>
+    </record>
+
+    <record id="action_expense_transfer_wizard" model="ir.actions.act_window">
+        <field name="name">Transfer Expense</field>
+        <field name="res_model">expense.transfer.wizard</field>
+        <field name="view_mode">form</field>
+        <field name="target">new</field>
+    </record>
 </odoo>
