--- a/proCRMCustom/views/crm_opportinuity_custom.xml
+++ b/proCRMCustom/views/crm_opportinuity_custom.xml
@@ -11,6 +11,7 @@
                 <field name="opportunity_sn" />
                 <field name="opportunity_notes" />
                 <field name="linkedin_link" />
+                <field name="quotation_amount" invisible="1"/>
             </xpath>
         </field>
     </record>
