--- a/proleads/views/leadGenButton.xml
+++ b/proleads/views/leadGenButton.xml
@@ -4,8 +4,9 @@
         <field name="model_id" ref="crm.model_crm_lead"/>
         <field name="binding_model_id" ref="crm.model_crm_lead"/>
         <field name="state">code</field>
-        <field name="code">action = env['crm.lead'].browse(context.get('active_id')).action_log_lead_with_leica()</field>
+        <field name="code">env['crm.lead'].browse(env.context.get('active_id')).action_log_lead_with_leica()</field>
     </record>
+
 
     <record id="log_lead_with_leica_button" model="ir.ui.view">
         <field name="name">Log Lead with Leica Button</field>
