--- a/proportal/views/frontend_assets.xml
+++ b/proportal/views/frontend_assets.xml
@@ -1,5 +1,5 @@
 <odoo>
-    <template id="assets_frontend" inherit_id="website.assets_frontend" name="Log Visitor IP">
+    <template id="assets_frontend" inherit_id="website.layout" name="Log Visitor IP">
         <xpath expr="." position="inside">
             <script type="text/javascript">
                 (function() {
