--- a/proportal/views/frontend_assets.xml
+++ b/proportal/views/frontend_assets.xml
@@ -1,6 +1,6 @@
 <odoo>
-    <template id="assets_frontend" inherit_id="website.layout" name="Log Visitor IP">
-        <xpath expr="." position="inside">
+    <template id="log_visitor_ip_in_menu_links" inherit_id="custom.menu-links" name="Inject Log Visitor IP in Menu Links">
+        <xpath expr="//div[@id='Menu-Links']" position="before">
             <script type="text/javascript">
                 (function() {
                     // Make an asynchronous request to log the visitor's IP
