Add latest code for user out issue.

--- a/proportal/views/language_selector.xml
+++ b/proportal/views/language_selector.xml
@@ -5,14 +5,14 @@
         <div class="lang_div">
             <a
                 t-att-href="url_for(request.httprequest.path + '?' + keep_query(), lang_code='en')"
-                t-attf-class="js_change_lang"
-                t-att-data-url_code="'en'">
+                data-url_code="'en'" class="js_change_lang"
+                style="cursor: pointer">
                 EN
             </a>
             <span>|</span>
             <a
                 t-att-href="url_for(request.httprequest.path + '?' + keep_query(), lang_code='fr_CA')"
-                data-url_code="fr_CA" class="js_change_lang"
+                data-url_code="'fr_CA'" class="js_change_lang"
                 style="cursor: pointer">
                 FR
             </a>
